text align fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -310,7 +310,7 @@ section .header{
     text-transform: capitalize;
     font-size: 1.3rem;
     cursor: pointer;
-    /* text-decoration: underline; */
+    text-align: center;
     bottom: 17px;  
     left: 50%; 
     transform: translate(-50%, -50%);
